[Admin] add interaction delay for promoted video
