# consumer/src/main/kotlin/com/noljanolja/server/consumer/adapter/core/CoreVideo.kt
@@ -42,6 +42,7 @@ data class CorePromotedVideoConfig(
     val autoLike: Boolean,
     val autoSubscribe: Boolean,
     val autoComment: Boolean,
+    val interactionDelay: Int,
     val endDate: LocalDate,
     val createdAt: Instant = Instant.now(),
     val updatedAt: Instant = Instant.now(),
